sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value pluspetit
	if(pluspetit(i+1:Int,i:Int):Boolean){
           ^AlgBubbleSort1:5: error: not found: type int
		echange(i:int,i+1:int)
                          ^